added survey button

--- a/libs/jquery-multilang/lang/de.json
+++ b/libs/jquery-multilang/lang/de.json
@@ -12,4 +12,5 @@
     "sei-sviluppatore" : "Bist du ein Entwickler?",
     "collabora-progetto" : "Mach mit",
     "app-progetto" : "Die Apps des Projekts"
+    "survey" : "Zur Umfrage"
 }
