--- a/libs/jquery-multilang/lang/it.json
+++ b/libs/jquery-multilang/lang/it.json
@@ -11,5 +11,6 @@
     "velocita-calcolata" : "velocità calcolata sulla base del numero dei veicoli passanti",
     "sei-sviluppatore" : "Sei uno sviluppatore?",
     "collabora-progetto" : "collabora al progetto",
-    "app-progetto" : "Le app del progetto"
+    "app-progetto" : "Le app del progetto",
+    "survey" : "Vai al questionario!"
 }
