--- a/libs/jquery-multilang/lang/en.json
+++ b/libs/jquery-multilang/lang/en.json
@@ -1,7 +1,7 @@
 {
     "direzione" : "Direction",
     "inverti-direzione" : "reverse the direction",
-    "scelta-green" : "green choise",
+    "scelta-green" : "green choice",
     "libero" : "free",
     "rallentamenti" : "delays",
     "traffico" : "traffic",
@@ -11,5 +11,6 @@
     "velocita-calcolata" : "speed calculation is based on the number of vehicles",
     "sei-sviluppatore" : "Are you a developer?",
     "collabora-progetto" : "get involved",
-    "app-progetto" : "Other project apps"
+    "app-progetto" : "Other project apps",
+    "survey" : "Go to the survey!"
 }
