--- a/libs/jquery-multilang/lang/de.json
+++ b/libs/jquery-multilang/lang/de.json
@@ -11,6 +11,7 @@
     "velocita-calcolata" : "Geschwindigkeit berechnet auf Grund der Anzahl der vorbeifahrenden Autos",
     "sei-sviluppatore" : "Bist du ein Entwickler?",
     "collabora-progetto" : "Mach mit",
-    "app-progetto" : "Die Apps des Projekts"
-    "survey" : "Zur Umfrage"
+    "app-progetto" : "Die experimentellen Apps der"
+    "survey" : "Zur Umfrage",
+    "municipality" : "Gemeinde Bozen"
 }
