--- a/libs/jquery-multilang/lang/en.json
+++ b/libs/jquery-multilang/lang/en.json
@@ -11,6 +11,7 @@
     "velocita-calcolata" : "speed calculation is based on the number of vehicles",
     "sei-sviluppatore" : "Are you a developer?",
     "collabora-progetto" : "get involved",
-    "app-progetto" : "Other project apps",
-    "survey" : "Go to the survey!"
+    "app-progetto" : "The experimental apps of the",
+    "survey" : "Go to the survey!",
+    "municipality" : "Municipality of Bolzano"
 }
