added files lost in last merge

--- a/libs/jquery-multilang/lang/de.json
+++ b/libs/jquery-multilang/lang/de.json
@@ -1,7 +1,7 @@
 {
     "direzione" : "Richtung",
     "inverti-direzione" : "Wechsle Richtung",
-    "scelta-green" : "grüne Entscheidung",
+    "scelta-green" : "grüne Lösung",
     "libero" : "frei",
     "rallentamenti" : "zähflüssig",
     "traffico" : "Verkehr",
