--- a/libs/jquery-multilang/lang/de.json
+++ b/libs/jquery-multilang/lang/de.json
@@ -8,6 +8,7 @@
     "vedi-grafico" : "Siehe Grafik",
     "tempo-medio-oggi" : "Wetter heute",
     "oggi" : "Heute",
+    "trend" : "Letzten 30 Tagen",
     "velocita-calcolata" : "Geschwindigkeit berechnet auf Grund der Anzahl der vorbeifahrenden Autos",
     "sei-sviluppatore" : "Bist du ein Entwickler?",
     "collabora-progetto" : "Mach mit",
