--- a/libs/jquery-multilang/lang/en.json
+++ b/libs/jquery-multilang/lang/en.json
@@ -8,6 +8,7 @@
     "vedi-grafico" : "Show the",
     "tempo-medio-oggi" : "Average time of today",
     "oggi" : "Today",
+    "trend" : "Last 30 days",
     "velocita-calcolata" : "speed calculation is based on the number of vehicles",
     "sei-sviluppatore" : "Are you a developer?",
     "collabora-progetto" : "get involved",
