--- a/libs/jquery-multilang/lang/it.json
+++ b/libs/jquery-multilang/lang/it.json
@@ -6,8 +6,9 @@
     "rallentamenti" : "rallentamenti",
     "traffico" : "traffico",
     "vedi-grafico" : "Vedi grafico",
-    "tempo-medio-oggi" : "Tempo medio di oggi",
+    "tempo-medio-oggi" : "Tempi medi di oggi",
     "oggi" : "Oggi",
+    "trend" : "Ultimi 30 giorni",
     "velocita-calcolata" : "velocità calcolata sulla base del numero dei veicoli passanti",
     "sei-sviluppatore" : "Sei uno sviluppatore?",
     "collabora-progetto" : "collabora al progetto",
